--- a/src/epub/text/introduction-1.xhtml
+++ b/src/epub/text/introduction-1.xhtml
@@ -10,73 +10,73 @@
 			<h2 epub:type="title">Names of Persons</h2>
 			<ul>
 				<li>
-					<p>Ger,—an early king of Ireland, grandfather of Hagen.</p>
+					<p>Ger⁠—an early king of Ireland, grandfather of Hagen.</p>
 				</li>
 				<li>
-					<p>U-te,—wife of Ger.</p>
+					<p>U-te⁠—wife of Ger.</p>
 				</li>
 				<li>
-					<p>Sigeband,—son of Ger and U-te.</p>
+					<p>Sigeband⁠—son of Ger and U-te.</p>
 				</li>
 				<li>
-					<p>U-te,—a Norwegian princess, wife of Sigeband.</p>
+					<p>U-te⁠—a Norwegian princess, wife of Sigeband.</p>
 				</li>
 				<li>
-					<p>Hagen,—son of Sigeband and the second U-te, and grandfather of Gu-drun.</p>
+					<p>Hagen⁠—son of Sigeband and the second U-te, and grandfather of Gu-drun.</p>
 				</li>
 				<li>
-					<p>Hilda,—a princess of India, wife of Hagen.</p>
+					<p>Hilda⁠—a princess of India, wife of Hagen.</p>
 				</li>
 				<li>
-					<p>Hilda,—daughter of Hagen, wife of Hettel.</p>
+					<p>Hilda⁠—daughter of Hagen, wife of Hettel.</p>
 				</li>
 				<li>
-					<p>Hettel,—king of the Hegelings, husband of Hilda, and father of Gu-drun and Ortwin.</p>
+					<p>Hettel⁠—king of the Hegelings, husband of Hilda, and father of Gu-drun and Ortwin.</p>
 				</li>
 				<li>
-					<p>Gu-drun,—daughter of Hettel and Hilda.</p>
+					<p>Gu-drun⁠—daughter of Hettel and Hilda.</p>
 				</li>
 				<li>
-					<p>Ortwin,—prince of Ortland, son of Hettel and Hilda.</p>
+					<p>Ortwin⁠—prince of Ortland, son of Hettel and Hilda.</p>
 				</li>
 				<li>
-					<p>Wâ-te,—vassal of Hettel.</p>
+					<p>Wâ-te⁠—vassal of Hettel.</p>
 				</li>
 				<li>
-					<p>Fru-te,—vassal of Hettel.</p>
+					<p>Fru-te⁠—vassal of Hettel.</p>
 				</li>
 				<li>
-					<p>Horant,—vassal of Hettel.</p>
+					<p>Horant⁠—vassal of Hettel.</p>
 				</li>
 				<li>
-					<p>Morunc,—vassal of Hettel.</p>
+					<p>Morunc⁠—vassal of Hettel.</p>
 				</li>
 				<li>
-					<p>Irold,—vassal of Hettel.</p>
+					<p>Irold⁠—vassal of Hettel.</p>
 				</li>
 				<li>
-					<p>Ludwig,—king of Normandy.</p>
+					<p>Ludwig⁠—king of Normandy.</p>
 				</li>
 				<li>
-					<p>Gerlind,—wife of Ludwig.</p>
+					<p>Gerlind⁠—wife of Ludwig.</p>
 				</li>
 				<li>
-					<p>Hartmut,—son of Ludwig and Gerlind, a suitor for Gu-drun.</p>
+					<p>Hartmut⁠—son of Ludwig and Gerlind, a suitor for Gu-drun.</p>
 				</li>
 				<li>
-					<p>Ortrun,—daughter of Ludwig and Gerlind.</p>
+					<p>Ortrun⁠—daughter of Ludwig and Gerlind.</p>
 				</li>
 				<li>
-					<p>Siegfried,—king of Moorland, a suitor for Gu-drun.</p>
+					<p>Siegfried⁠—king of Moorland, a suitor for Gu-drun.</p>
 				</li>
 				<li>
-					<p>Herwic,—king of Sealand, betrothed to Gu-drun.</p>
+					<p>Herwic⁠—king of Sealand, betrothed to Gu-drun.</p>
 				</li>
 				<li>
-					<p>Hildeburg,—maiden companion of Gu-drun.</p>
+					<p>Hildeburg⁠—maiden companion of Gu-drun.</p>
 				</li>
 				<li>
-					<p>Hergart,—maiden companion of Gu-drun.</p>
+					<p>Hergart⁠—maiden companion of Gu-drun.</p>
 				</li>
 			</ul>
 		</section>
