--- a/src/epub/text/tale-1.xhtml
+++ b/src/epub/text/tale-1.xhtml
@@ -67,7 +67,7 @@
 				<br/>
 				<span>
 					<span>That he might there be learning</span>
-					<span>all he had need to know,—</span>
+					<span>all he had need to know⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -403,7 +403,7 @@
 				<br/>
 				<span>
 					<span>Whatever they could wish for</span>
-					<span>was given them at his word,—</span>
+					<span>was given them at his word⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -839,7 +839,7 @@
 			<p>
 				<span>
 					<span>From the store-rooms of the castle</span>
-					<span>clothing now was borne,—</span>
+					<span>clothing now was borne⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -865,7 +865,7 @@
 				<br/>
 				<span>
 					<span>And likewise to fair maidens</span>
-					<span>what one to youth should allow,—</span>
+					<span>what one to youth should allow⁠—</span>
 				</span>
 				<br/>
 				<span>
