--- a/src/epub/text/tale-10.xhtml
+++ b/src/epub/text/tale-10.xhtml
@@ -608,7 +608,7 @@
 			<p>
 				<span>
 					<span>Then the earl thus answered:</span>
-					<span>“This can I truly say,—</span>
+					<span>“This can I truly say⁠—</span>
 				</span>
 				<br/>
 				<span>
