--- a/src/epub/text/tale-12.xhtml
+++ b/src/epub/text/tale-12.xhtml
@@ -176,7 +176,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>This have many told me,—</span>
+					<span>This have many told me⁠—</span>
 					<span>’tis for the sake of your daughter</span>
 				</span>
 				<br/>
