--- a/src/epub/text/tale-13.xhtml
+++ b/src/epub/text/tale-13.xhtml
@@ -318,7 +318,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Sitting sad, and weeping,—</span>
+					<span>Sitting sad, and weeping⁠—</span>
 					<span>faithful love she had;</span>
 				</span>
 				<br/>
@@ -639,7 +639,7 @@
 				<br/>
 				<span>
 					<span>Twenty thousand warriors</span>
-					<span>he brought,—for nought he tarried:</span>
+					<span>he brought⁠—for nought he tarried:</span>
 				</span>
 				<br/>
 				<span>
@@ -1179,8 +1179,8 @@
 				</span>
 				<br/>
 				<span>
-					<span>Then the beleaguered warriors,—</span>
-					<span>it cannot be gainsaid,—</span>
+					<span>Then the beleaguered warriors⁠—</span>
+					<span>it cannot be gainsaid⁠—</span>
 				</span>
 				<br/>
 				<span>
