--- a/src/epub/text/tale-14.xhtml
+++ b/src/epub/text/tale-14.xhtml
@@ -251,7 +251,7 @@
 			<p>
 				<span>
 					<span>Ludwig and young Hartmut</span>
-					<span>had both the selfsame mind,—</span>
+					<span>had both the selfsame mind⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -302,7 +302,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>That will I give you freely,—</span>
+					<span>That will I give you freely⁠—</span>
 					<span>but women shall not share it.</span>
 				</span>
 				<br/>
