--- a/src/epub/text/tale-15.xhtml
+++ b/src/epub/text/tale-15.xhtml
@@ -41,12 +41,12 @@
 			<p>
 				<span>
 					<span>If she her love would give him,</span>
-					<span>as he had asked before,—</span>
+					<span>as he had asked before⁠—</span>
 				</span>
 				<br/>
 				<span>
 					<span>Ofttimes his heart was heavy</span>
-					<span>for the love to her he bore,—</span>
+					<span>for the love to her he bore⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -345,7 +345,7 @@
 				<br/>
 				<span>
 					<span>Then they told the ladies</span>
-					<span>what they would there be doing,—</span>
+					<span>what they would there be doing⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -356,7 +356,7 @@
 			<p>
 				<span>
 					<span>The high-born maiden answered:</span>
-					<span>“Of this I nought will hear,—</span>
+					<span>“Of this I nought will hear⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -759,7 +759,7 @@
 				<br/>
 				<span>
 					<span>That they, ’gainst Hilda’s bidding,</span>
-					<span>had their care forborne,—</span>
+					<span>had their care forborne⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -915,7 +915,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Rich grew Hartmut’s followers,—</span>
+					<span>Rich grew Hartmut’s followers⁠—</span>
 					<span>you well may trust that I the truth am telling.</span>
 				</span>
 			</p>
@@ -1105,7 +1105,7 @@
 				<br/>
 				<span>
 					<span>Both Gu-drun and Hildeburg</span>
-					<span>he with him carried off,—the prize he wanted.</span>
+					<span>he with him carried off⁠—the prize he wanted.</span>
 				</span>
 			</p>
 			<p>
@@ -1132,7 +1132,7 @@
 			<p>
 				<span>
 					<span>How mournful were the tidings</span>
-					<span>before the king she laid!—</span>
+					<span>before the king she laid!⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -1210,7 +1210,7 @@
 				<br/>
 				<span>
 					<span>They their barks were turning;</span>
-					<span>the name of Wulpensand—or shore of the wolves—it had taken.</span>
+					<span>the name of Wulpensand⁠—or shore of the wolves⁠—it had taken.</span>
 				</span>
 			</p>
 		</section>
