--- a/src/epub/text/tale-16.xhtml
+++ b/src/epub/text/tale-16.xhtml
@@ -361,7 +361,7 @@
 				<br/>
 				<span>
 					<span>To him old Wâ-te answered:</span>
-					<span>“’Tis best that peace be won</span>
+					<span>“ ’Tis best that peace be won</span>
 				</span>
 				<br/>
 				<span>
@@ -670,8 +670,8 @@
 			</p>
 			<p>
 				<span>
-					<span>On the shore he found the pilgrims,—</span>
-					<span>this I know is true,—</span>
+					<span>On the shore he found the pilgrims⁠—</span>
+					<span>this I know is true⁠—</span>
 				</span>
 				<br/>
 				<span>
