--- a/src/epub/text/tale-17.xhtml
+++ b/src/epub/text/tale-17.xhtml
@@ -545,7 +545,7 @@
 			<p>
 				<span>
 					<span>Unto their lords all faithful,</span>
-					<span>they strove upon the sand,—</span>
+					<span>they strove upon the sand⁠—</span>
 				</span>
 				<br/>
 				<span>
