--- a/src/epub/text/tale-18.xhtml
+++ b/src/epub/text/tale-18.xhtml
@@ -20,7 +20,7 @@
 			<p>
 				<span>
 					<span>High in hand their weapons</span>
-					<span>Hettel and Ludwig bore,—</span>
+					<span>Hettel and Ludwig bore⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -303,7 +303,7 @@
 				<br/>
 				<span>
 					<span>And so the men of the Hegelings</span>
-					<span>my plan will not be knowing,—</span>
+					<span>my plan will not be knowing⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -345,11 +345,11 @@
 				<br/>
 				<span>
 					<span>All who would not stop it</span>
-					<span>were threatened death by drowning,—</span>
+					<span>were threatened death by drowning⁠—</span>
 				</span>
 				<br/>
 				<span>
-					<span>To be sunk beneath the waters,—</span>
+					<span>To be sunk beneath the waters⁠—</span>
 					<span>if they were sobbing heard, or loudly moaning.</span>
 				</span>
 			</p>
@@ -571,7 +571,7 @@
 				<br/>
 				<span>
 					<span>For this one sorrow only,</span>
-					<span>would their lot have hapless been,—</span>
+					<span>would their lot have hapless been⁠—</span>
 				</span>
 				<br/>
 				<span>
