--- a/src/epub/text/tale-19.xhtml
+++ b/src/epub/text/tale-19.xhtml
@@ -293,7 +293,7 @@
 			<p>
 				<span>
 					<span>The weeping Hilda answered:</span>
-					<span>“’Tis best that this be done;</span>
+					<span>“ ’Tis best that this be done;</span>
 				</span>
 				<br/>
 				<span>
@@ -597,7 +597,7 @@
 				<br/>
 				<span>
 					<span>And have them fully ready</span>
-					<span>—my hest shall well be heeded—</span>
+					<span>—my hest shall well be heeded⁠—</span>
 				</span>
 				<br/>
 				<span>
