--- a/src/epub/text/tale-20.xhtml
+++ b/src/epub/text/tale-20.xhtml
@@ -251,7 +251,7 @@
 			<p>
 				<span>
 					<span>Back to the ship did Hartmut</span>
-					<span>bring the maiden fair;—</span>
+					<span>bring the maiden fair;⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -607,7 +607,7 @@
 			</p>
 			<p>
 				<span>
-					<span>“’Twas by your own ill-doing</span>
+					<span>“ ’Twas by your own ill-doing</span>
 					<span>that I, poor wretched maid,</span>
 				</span>
 				<br/>
@@ -1285,7 +1285,7 @@
 				<br/>
 				<span>
 					<span>For seven half years and over,</span>
-					<span>—this is all too true,—</span>
+					<span>—this is all too true⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -1457,7 +1457,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>“’Twere best you now bethink you,</span>
+					<span>“ ’Twere best you now bethink you,</span>
 					<span>or else, my fair young maiden,</span>
 				</span>
 				<br/>
@@ -1742,7 +1742,7 @@
 			<p>
 				<span>
 					<span>“Well known to you ’tis also,</span>
-					<span>—for this I mourn again,—</span>
+					<span>—for this I mourn again⁠—</span>
 				</span>
 				<br/>
 				<span>
