--- a/src/epub/text/tale-21.xhtml
+++ b/src/epub/text/tale-21.xhtml
@@ -423,8 +423,8 @@
 				</span>
 				<br/>
 				<span>
-					<span>“Well we all must rue it—</span>
-					<span>to God may this be known—</span>
+					<span>“Well we all must rue it⁠—</span>
+					<span>to God may this be known⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -628,7 +628,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Long the toiling lasted,—</span>
+					<span>Long the toiling lasted⁠—</span>
 					<span>that is true enough;</span>
 				</span>
 				<br/>
