--- a/src/epub/text/tale-22.xhtml
+++ b/src/epub/text/tale-22.xhtml
@@ -181,7 +181,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>To none Gu-drun is dearer,—</span>
+					<span>To none Gu-drun is dearer⁠—</span>
 					<span>the homeless maid, long sundered from her mother.”</span>
 				</span>
 			</p>
@@ -314,7 +314,7 @@
 			<p>
 				<span>
 					<span>Then sent the knight this answer:</span>
-					<span>“Unto Queen Hilda say,—</span>
+					<span>“Unto Queen Hilda say⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -335,7 +335,7 @@
 			<p>
 				<span>
 					<span>“I bid you now, moreover,</span>
-					<span>to say unto the queen,—</span>
+					<span>to say unto the queen⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -638,7 +638,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Twenty thousand fighters,—</span>
+					<span>Twenty thousand fighters⁠—</span>
 					<span>men both brave and daring;</span>
 				</span>
 				<br/>
@@ -1258,7 +1258,7 @@
 			</p>
 			<p>
 				<span>
-					<span>“’Twas told to me, moreover,</span>
+					<span>“ ’Twas told to me, moreover,</span>
 					<span>(by God are wonders wrought,)</span>
 				</span>
 				<br/>
