--- a/src/epub/text/tale-24.xhtml
+++ b/src/epub/text/tale-24.xhtml
@@ -387,7 +387,7 @@
 				<br/>
 				<span>
 					<span>We all might then be happy,</span>
-					<span>if thou could’st this be telling,—</span>
+					<span>if thou could’st this be telling⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -428,8 +428,8 @@
 				</span>
 				<br/>
 				<span>
-					<span>And now to know am longing—</span>
-					<span>if life such bliss can lend me—</span>
+					<span>And now to know am longing⁠—</span>
+					<span>if life such bliss can lend me⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -612,7 +612,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>The clothing they were wearing—</span>
+					<span>The clothing they were wearing⁠—</span>
 					<span>they better care should get.</span>
 				</span>
 				<br/>
