--- a/src/epub/text/tale-25.xhtml
+++ b/src/epub/text/tale-25.xhtml
@@ -785,7 +785,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>The tidings to them given,—</span>
+					<span>The tidings to them given⁠—</span>
 					<span>that fair Gu-drun, their lady,</span>
 				</span>
 				<br/>
@@ -1227,11 +1227,11 @@
 				<br/>
 				<span>
 					<span>Again, ere morning lightens,</span>
-					<span>these shores will I be treading,—</span>
+					<span>these shores will I be treading⁠—</span>
 				</span>
 				<br/>
 				<span>
-					<span>For this my troth I pledge you,—</span>
+					<span>For this my troth I pledge you⁠—</span>
 					<span>eighty thousand followers with me leading.”</span>
 				</span>
 			</p>
@@ -2182,7 +2182,7 @@
 			</p>
 			<p>
 				<span>
-					<span>“’Tis well for me,” said Ortrun,</span>
+					<span>“ ’Tis well for me,” said Ortrun,</span>
 					<span>“that I have lived till now,</span>
 				</span>
 				<br/>
