--- a/src/epub/text/tale-27.xhtml
+++ b/src/epub/text/tale-27.xhtml
@@ -71,7 +71,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>On it a head is blazoned,—</span>
+					<span>On it a head is blazoned⁠—</span>
 					<span>as red as gold it glitters:</span>
 				</span>
 				<br/>
@@ -187,8 +187,8 @@
 			</p>
 			<p>
 				<span>
-					<span>“There Irold, too, is coming,—</span>
-					<span>this that I say is true,—</span>
+					<span>“There Irold, too, is coming⁠—</span>
+					<span>this that I say is true⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -839,7 +839,7 @@
 			<p>
 				<span>
 					<span>Then said one among them:</span>
-					<span>“’Tis Hartmut whom you see;</span>
+					<span>“ ’Tis Hartmut whom you see;</span>
 				</span>
 				<br/>
 				<span>
@@ -1175,7 +1175,7 @@
 			<p>
 				<span>
 					<span>Ortwin himself then answered:</span>
-					<span>“’Tis Hartmut this has done.”</span>
+					<span>“ ’Tis Hartmut this has done.”</span>
 				</span>
 				<br/>
 				<span>
