--- a/src/epub/text/tale-28.xhtml
+++ b/src/epub/text/tale-28.xhtml
@@ -213,7 +213,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>“’Tis best we hence withdraw us;</span>
+					<span>“ ’Tis best we hence withdraw us;</span>
 					<span>how many here lie dead</span>
 				</span>
 				<br/>
@@ -775,7 +775,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Back then sprang the rascal,—</span>
+					<span>Back then sprang the rascal⁠—</span>
 					<span>his anger he did fear;</span>
 				</span>
 				<br/>
