--- a/src/epub/text/tale-3.xhtml
+++ b/src/epub/text/tale-3.xhtml
@@ -618,7 +618,7 @@
 				<br/>
 				<span>
 					<span>“Whether to see young Hagen,</span>
-					<span>his son, he still is yearning,—</span>
+					<span>his son, he still is yearning⁠—</span>
 				</span>
 				<br/>
 				<span>
