--- a/src/epub/text/tale-30.xhtml
+++ b/src/epub/text/tale-30.xhtml
@@ -61,12 +61,12 @@
 			</p>
 			<p>
 				<span>
-					<span>With all their speed they hastened,—</span>
-					<span>that I well can say,—</span>
+					<span>With all their speed they hastened⁠—</span>
+					<span>that I well can say⁠—</span>
 				</span>
 				<br/>
 				<span>
-					<span>And reached at last their kingdom,—</span>
+					<span>And reached at last their kingdom⁠—</span>
 					<span>I cannot tell the day.</span>
 				</span>
 				<br/>
@@ -571,7 +571,7 @@
 				<br/>
 				<span>
 					<span>Then Hilda said to Fru-te:</span>
-					<span>“No shame for this I feel,—</span>
+					<span>“No shame for this I feel⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -722,8 +722,8 @@
 				</span>
 				<br/>
 				<span>
-					<span>But Hartmut greatly sorrowed—</span>
-					<span>no happiness it gave him—</span>
+					<span>But Hartmut greatly sorrowed⁠—</span>
+					<span>no happiness it gave him⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -739,7 +739,7 @@
 				<br/>
 				<span>
 					<span>She said: “My dearest mother,</span>
-					<span>never this forget,—</span>
+					<span>never this forget⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -832,7 +832,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>And with an oath must swear it,—</span>
+					<span>And with an oath must swear it⁠—</span>
 					<span>not hence to ride unbidden, nor to leave me.”</span>
 				</span>
 			</p>
@@ -1309,7 +1309,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gladly will I love her,—</span>
+					<span>Gladly will I love her⁠—</span>
 					<span>a maid of such high-breeding.”</span>
 				</span>
 				<br/>
@@ -2019,7 +2019,7 @@
 				<br/>
 				<span>
 					<span>Until they found the maiden.</span>
-					<span>Wâ-te they feared would fight,—</span>
+					<span>Wâ-te they feared would fight⁠—</span>
 				</span>
 				<br/>
 				<span>
