--- a/src/epub/text/tale-31.xhtml
+++ b/src/epub/text/tale-31.xhtml
@@ -218,7 +218,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Forsooth we cannot tell you,—</span>
+					<span>Forsooth we cannot tell you⁠—</span>
 					<span>it never reached our hearing.</span>
 				</span>
 				<br/>
@@ -239,7 +239,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Soon to be given also,—</span>
+					<span>Soon to be given also⁠—</span>
 					<span>such indeed is the saying:</span>
 				</span>
 				<br/>
@@ -403,7 +403,7 @@
 				<br/>
 				<span>
 					<span>Could of the brave old Wâ-te</span>
-					<span>this truth indeed gainsay,—</span>
+					<span>this truth indeed gainsay⁠—</span>
 				</span>
 				<br/>
 				<span>
