--- a/src/epub/text/tale-4.xhtml
+++ b/src/epub/text/tale-4.xhtml
@@ -240,7 +240,7 @@
 				<br/>
 				<span>
 					<span>Led by a tale of wonder</span>
-					<span>that the son of the king was living,—</span>
+					<span>that the son of the king was living⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -1106,7 +1106,7 @@
 				<br/>
 				<span>
 					<span>“Enough,” soon went the saying:</span>
-					<span>“’Twere best that none should go for her a-wooing.”</span>
+					<span>“ ’Twere best that none should go for her a-wooing.”</span>
 				</span>
 			</p>
 			<p>
