--- a/src/epub/text/tale-5.xhtml
+++ b/src/epub/text/tale-5.xhtml
@@ -192,7 +192,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Then said Morunc: “’Tis Hilda,</span>
+					<span>Then said Morunc: “ ’Tis Hilda,</span>
 					<span>in Ireland she doth dwell;</span>
 				</span>
 				<br/>
@@ -1216,7 +1216,7 @@
 			<p>
 				<span>
 					<span>“Meanwhile must men be making</span>
-					<span>whatever we shall need,—</span>
+					<span>whatever we shall need⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -1615,7 +1615,7 @@
 			<p>
 				<span>
 					<span>The good and trusty Fru-te</span>
-					<span>the wealth of the king did guard,—</span>
+					<span>the wealth of the king did guard⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -2245,7 +2245,7 @@
 			<p>
 				<span>
 					<span>The king now seated near him</span>
-					<span>both the two young men,—</span>
+					<span>both the two young men⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -2581,12 +2581,12 @@
 			<p>
 				<span>
 					<span>Whate’er of Wâ-te or Fru-te</span>
-					<span>was said by any one,—</span>
+					<span>was said by any one⁠—</span>
 				</span>
 				<br/>
 				<span>
 					<span>Of all the deeds of kindness</span>
-					<span>that here by them were done,—</span>
+					<span>that here by them were done⁠—</span>
 				</span>
 				<br/>
 				<span>
