--- a/src/epub/text/tale-6.xhtml
+++ b/src/epub/text/tale-6.xhtml
@@ -692,7 +692,7 @@
 			<p>
 				<span>
 					<span>To the lady thus he answered:</span>
-					<span>“To you he sends this word,—</span>
+					<span>“To you he sends this word⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -1101,7 +1101,7 @@
 				<br/>
 				<span>
 					<span>To come to the shore to see us,</span>
-					<span>my lady with him riding,—</span>
+					<span>my lady with him riding⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -1264,7 +1264,7 @@
 				<br/>
 				<span>
 					<span>So far as I was able,</span>
-					<span>I have striven for this end,—</span>
+					<span>I have striven for this end⁠—</span>
 				</span>
 				<br/>
 				<span>
