--- a/src/epub/text/tale-7.xhtml
+++ b/src/epub/text/tale-7.xhtml
@@ -502,8 +502,8 @@
 			</p>
 			<p>
 				<span>
-					<span>Gay were they in clothing,—</span>
-					<span>’gainst this could none say nay,—</span>
+					<span>Gay were they in clothing⁠—</span>
+					<span>’gainst this could none say nay⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -885,8 +885,8 @@
 				</span>
 				<br/>
 				<span>
-					<span>All clad in fair white linen,—</span>
-					<span>whiter none e’er wore,—</span>
+					<span>All clad in fair white linen⁠—</span>
+					<span>whiter none e’er wore⁠—</span>
 				</span>
 				<br/>
 				<span>
