--- a/src/epub/text/tale-8.xhtml
+++ b/src/epub/text/tale-8.xhtml
@@ -223,7 +223,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Let this be not forgotten,—</span>
+					<span>Let this be not forgotten⁠—</span>
 					<span>that now your Irish foes you may be slaying.”</span>
 				</span>
 			</p>
@@ -318,8 +318,8 @@
 				</span>
 				<br/>
 				<span>
-					<span>The sea gave back his shouting,—</span>
-					<span>truly his strength was good,—</span>
+					<span>The sea gave back his shouting⁠—</span>
+					<span>truly his strength was good⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -433,7 +433,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>With Irold, too, and Morunc,—</span>
+					<span>With Irold, too, and Morunc⁠—</span>
 					<span>knights as good as foemen’s lands e’er wasted.</span>
 				</span>
 			</p>
@@ -444,7 +444,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Knights there were a thousand,—</span>
+					<span>Knights there were a thousand⁠—</span>
 					<span>the press of them was strong.</span>
 				</span>
 				<br/>
@@ -587,7 +587,7 @@
 			<p>
 				<span>
 					<span>Hagen laid on Wâ-te</span>
-					<span>many a heavy blow,—</span>
+					<span>many a heavy blow⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -596,7 +596,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>With fiery sparks outflashing,—</span>
+					<span>With fiery sparks outflashing⁠—</span>
 					<span>like to brands they glittered;</span>
 				</span>
 				<br/>
@@ -775,8 +775,8 @@
 			</p>
 			<p>
 				<span>
-					<span>Hagen shouted loudly,—</span>
-					<span>fell indeed was his mood,—</span>
+					<span>Hagen shouted loudly⁠—</span>
+					<span>fell indeed was his mood⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -986,7 +986,7 @@
 			<p>
 				<span>
 					<span>Then spake the aged Wâ-te:</span>
-					<span>“Their wounds I cannot heal,—</span>
+					<span>“Their wounds I cannot heal⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -995,7 +995,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Each unto the other,—</span>
+					<span>Each unto the other⁠—</span>
 					<span>Hagen brave and knightly,</span>
 				</span>
 				<br/>
@@ -1117,7 +1117,7 @@
 				<br/>
 				<span>
 					<span>While Wâ-te these was binding</span>
-					<span>he bade the maids step back,—</span>
+					<span>he bade the maids step back⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -1154,7 +1154,7 @@
 			<p>
 				<span>
 					<span>Wâ-te, the healing-master,</span>
-					<span>made haste,—no time he lost;</span>
+					<span>made haste⁠—no time he lost;</span>
 				</span>
 				<br/>
 				<span>
@@ -1300,7 +1300,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Hettel now had thriven,—</span>
+					<span>Hettel now had thriven⁠—</span>
 					<span>his suit he well did gain.</span>
 				</span>
 				<br/>
