--- a/src/epub/text/tale-29.xhtml
+++ b/src/epub/text/tale-29.xhtml
@@ -487,7 +487,7 @@
 				<br/>
 				<span>
 					<span>And said: “Gu-drun, good lady,</span>
-					<span>on me with kindness look,—</span>
+					<span>on me with kindness look⁠—</span>
 				</span>
 				<br/>
 				<span>
@@ -864,8 +864,8 @@
 				</span>
 				<br/>
 				<span>
-					<span>“Since now we have the castle,—</span>
-					<span>the stronghold Kassiane,—</span>
+					<span>“Since now we have the castle⁠—</span>
+					<span>the stronghold Kassiane⁠—</span>
 				</span>
 				<br/>
 				<span>
