--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,114 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/preface.xhtml">Preface</a>
+				</li>
+				<li>
+					<a href="text/introduction-1.xhtml">Names of Persons</a>
+				</li>
+				<li>
+					<a href="text/introduction-2.xhtml">Names of Places</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml">Gudrun</a>
+					<ol>
+						<li>
+							<a href="text/tale-1.xhtml">Tale <span epub:type="z3998:roman">I</span>: How Hagen Was Carried Off by the Griffin</a>
+						</li>
+						<li>
+							<a href="text/tale-2.xhtml">Tale <span epub:type="z3998:roman">II</span>: How Hagen Slew the Griffin</a>
+						</li>
+						<li>
+							<a href="text/tale-3.xhtml">Tale <span epub:type="z3998:roman">III</span>: How Hagen Sailed to His Home</a>
+						</li>
+						<li>
+							<a href="text/tale-4.xhtml">Tale <span epub:type="z3998:roman">IV</span>: How Hagen Was Met by His Father and Mother</a>
+						</li>
+						<li>
+							<a href="text/tale-5.xhtml">Tale <span epub:type="z3998:roman">V</span>: How Wâ-te Was Sent to Ireland as a Suitor</a>
+						</li>
+						<li>
+							<a href="text/tale-6.xhtml">Tale <span epub:type="z3998:roman">VI</span>: How Sweetly Horant Sang</a>
+						</li>
+						<li>
+							<a href="text/tale-7.xhtml">Tale <span epub:type="z3998:roman">VII</span>: How the Maidens Came to See the Ship, and Were Carried to Hettel’s Kingdom</a>
+						</li>
+						<li>
+							<a href="text/tale-8.xhtml">Tale <span epub:type="z3998:roman">VIII</span>: How Hagen Followed His Daughter</a>
+						</li>
+						<li>
+							<a href="text/tale-9.xhtml">Tale <span epub:type="z3998:roman">IX</span>: How Gudrun Was Sought by Siegfried</a>
+						</li>
+						<li>
+							<a href="text/tale-10.xhtml">Tale <span epub:type="z3998:roman">X</span>: How Hartmut Sent to Woo Gudrun</a>
+						</li>
+						<li>
+							<a href="text/tale-11.xhtml">Tale <span epub:type="z3998:roman">XI</span>: How Herwic Sent to Seek Gudrun and How Hartmut Came Himself</a>
+						</li>
+						<li>
+							<a href="text/tale-12.xhtml">Tale <span epub:type="z3998:roman">XII</span>: How Herwic Made War on Hettel, and How Gudrun Was Betrothed to Him</a>
+						</li>
+						<li>
+							<a href="text/tale-13.xhtml">Tale <span epub:type="z3998:roman">XIII</span>: How Siegfried Made War Against Herwic</a>
+						</li>
+						<li>
+							<a href="text/tale-14.xhtml">Tale <span epub:type="z3998:roman">XIV</span>: How Hettel Sent Tidings from Herwic’s Land</a>
+						</li>
+						<li>
+							<a href="text/tale-15.xhtml">Tale <span epub:type="z3998:roman">XV</span>: How Hartmut Carried Away Gudrun</a>
+						</li>
+						<li>
+							<a href="text/tale-16.xhtml">Tale <span epub:type="z3998:roman">XVI</span>: How Hilda Sent to Hettel and Herwic to Ask Their Help Against Hartmut</a>
+						</li>
+						<li>
+							<a href="text/tale-17.xhtml">Tale <span epub:type="z3998:roman">XVII</span>: How Hettel Came to the Wulpensand in Search of His Daughter</a>
+						</li>
+						<li>
+							<a href="text/tale-18.xhtml">Tale <span epub:type="z3998:roman">XVIII</span>: How Ludwig Slew Hettel, and Stole Away in the Night</a>
+						</li>
+						<li>
+							<a href="text/tale-19.xhtml">Tale <span epub:type="z3998:roman">XIX</span>: How the Hegelings Went Home to Their Own Land</a>
+						</li>
+						<li>
+							<a href="text/tale-20.xhtml">Tale <span epub:type="z3998:roman">XX</span>: How Hartmut Went Home to Normandy</a>
+						</li>
+						<li>
+							<a href="text/tale-21.xhtml">Tale <span epub:type="z3998:roman">XXI</span>: How Gudrun Must Wash Clothes on the Beach</a>
+						</li>
+						<li>
+							<a href="text/tale-22.xhtml">Tale <span epub:type="z3998:roman">XXII</span>: How Hilda Made War to Bring Back Her Daughter</a>
+						</li>
+						<li>
+							<a href="text/tale-23.xhtml">Tale <span epub:type="z3998:roman">XXIII</span>: How Hilda’s Warriors Landed in Sight of Hartmut’s Kingdom</a>
+						</li>
+						<li>
+							<a href="text/tale-24.xhtml">Tale <span epub:type="z3998:roman">XXIV</span>: How Their Coming Was Made Known to Gudrun</a>
+						</li>
+						<li>
+							<a href="text/tale-25.xhtml">Tale <span epub:type="z3998:roman">XXV</span>: How Herwic and Ortwin Found Gudrun</a>
+						</li>
+						<li>
+							<a href="text/tale-26.xhtml">Tale <span epub:type="z3998:roman">XXVI</span>: How the Hegelings Landed Near Ludwig’s Castle</a>
+						</li>
+						<li>
+							<a href="text/tale-27.xhtml">Tale <span epub:type="z3998:roman">XXVII</span>: How Ludwig and Hartmut Met the Hegelings</a>
+						</li>
+						<li>
+							<a href="text/tale-28.xhtml">Tale <span epub:type="z3998:roman">XXVIII</span>: How Herwic Slew Ludwig</a>
+						</li>
+						<li>
+							<a href="text/tale-29.xhtml">Tale <span epub:type="z3998:roman">XXIX</span>: How Hartmut Was Taken Prisoner</a>
+						</li>
+						<li>
+							<a href="text/tale-30.xhtml">Tale <span epub:type="z3998:roman">XXX</span>: How Gudrun Was Brought Home to Hilda</a>
+						</li>
+						<li>
+							<a href="text/tale-31.xhtml">Tale <span epub:type="z3998:roman">XXXI</span>: How the Four Kings Were Wedded in Hilda’s Land</a>
+						</li>
+						<li>
+							<a href="text/tale-32.xhtml">Tale <span epub:type="z3998:roman">XXXII</span>: How They All Went to Their Homes</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,7 +135,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/tale-1.xhtml" epub:type="bodymatter">Gudrun</a>
 				</li>
 			</ol>
 		</nav>
