--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -11,24 +11,24 @@
 				<h2 epub:type="title">Colophon</h2>
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
-			<p><i epub:type="se:name.publication.book">Gudrun</i><br/>
-			was published in YEAR.<br/>
-			It was translated from ORIGINAL_LANGUAGE in TRANSLATION_YEAR by<br/>
+			<p><i epub:type="se:name.publication.poem">Gudrun</i><br/>
+			was written around 1250.<br/>
+			It was translated from Middle High German in 1889 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Mary_Pickering_Nichols">Mary Pickering Nichols</a>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="https://www.linkedin.com/in/emma-sweeney-554927190/">Emma Sweeney</a>,<br/>
 			and is based on a transcription produced in 2014 by<br/>
-			<b epub:type="z3998:personal-name">sp1nd</b>, <b epub:type="z3998:personal-name">Stephen Hutcheson</b>, and <a href="https://www.pgdp.net">Distributed Proofreaders</a><br/>
+			<b>An Anonymous Volunteer</b>, <b epub:type="z3998:personal-name">Stephen Hutcheson</b>, and <a href="https://www.pgdp.net">Distributed Proofreaders</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/46109">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			<a href="https://archive.org/details/gudrunmediaevale00nichiala">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="COVER_ARTIST_WIKI_URL">COVER_ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting" xml:lang="de">Skizze zum Nibelungenring: Abschied Siegfrieds von Brünhilde</i>,<br/>
+			a painting by<br/>
+			<a href="https://en.wikipedia.org/wiki/Michael_Echter">Michael Echter</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
